# djhcpp

./: .clang-format  .gitmodules  CMakeLists.txt  CustomEvents.cpp  CustomEvents.h  CustomTable.cpp  CustomTable.h  MainWindow.cpp  MainWindow.h  MainWindowCallbacks.cpp  PatchExample.xml  README.md  TrackInfoViewer.cpp  TracklistingWindow.cpp  TracklistingWindow.h  WindowBase.cpp  WindowBase.h  build-debug.sh  build-deploy.sh  build-release.sh  config.h  config.h.in  djhcpp-layout-edit.fbp  djhcpp-layout-old.fbp  djhcpp-layout.fbp  dll-list.txt  dlls.txt  flake.nix  form-project.fbp  main.cpp  song-patches.xml
include/: CustomTable.h  DirectoryDropTarget.h  MainWindow.h  StringsViewer.h  TrackInfoViewer.h  TracklistingWindow.h  Utils.h  config.h
res/: EmpireModeSpec.xml  resources.rc
src/: CustomTable.cpp  DirectoryDropTarget.cpp  MainWindow.cpp  StringsViewer.cpp  TrackInfoViewer.cpp  TracklistingWindow.cpp  Utils.cpp  WindowBase.cpp  main.cpp
